--- a/src/components/Chat/ChatModule/LiveChat/MessageBody/Messages/Message/MessageAttachments/MediaContent/MediaContent.scss
+++ b/src/components/Chat/ChatModule/LiveChat/MessageBody/Messages/Message/MessageAttachments/MediaContent/MediaContent.scss
@@ -1,7 +1,7 @@
 @import "assets/scss/master";
 
 .content--media {
-    width: 100%;
+    // width: 100%;
     cursor: pointer;
     margin: 0.5rem 0;
 
@@ -16,19 +16,20 @@
     &.img {
         object-fit: cover;
         border: 1px solid $primary__theme_color;
-
         #{$relaxed__mode__template__selector} {
             border: none;
         }
 
         &.mobile {
-            width: 275px;
-            height: 160px;
+            // width: 275px;
+            // height: 160px;
+            aspect-ratio: 3/2;
         }
 
         &.desktop {
-            width: 440px;
-            height: 246px;
+            // width: 440px;
+            // height: 246px;
+            aspect-ratio: 16/9;
         }
 
         &.img-orientation {
@@ -44,7 +45,6 @@
         width: fit-content;
         max-width: 100%;
     }
-    
 }
 
 .content--document {
@@ -70,24 +70,23 @@
         border-radius: 0.5rem 0.5rem 0.5rem 0px;
     }
 
-    .details{
+    .details {
         display: flex;
         flex-direction: column;
-        
-            p {
-                font-size: 0.75rem;
-                line-height: 1rem;
-                display: flex;
-                align-items: center;
-                margin: 0;
-            }
 
-            span {
-                font-size: 8px;
-                line-height: 0.75rem;
-                text-transform: uppercase;
-                text-align: left;
-            }
+        p {
+            font-size: 0.75rem;
+            line-height: 1rem;
+            display: flex;
+            align-items: center;
+            margin: 0;
+        }
+
+        span {
+            font-size: 8px;
+            line-height: 0.75rem;
+            text-transform: uppercase;
+            text-align: left;
+        }
     }
 }
-
